[package]
name = "vdb"
version = "0.1.0"
authors = ["Raoul van Putten"]
edition = "2018"
description = "A database system implemented in pure rust that takes ideas from Entity Component Systems and relational databases."
license = "MIT OR Apache-2.0"

[dependencies]
serde_derive = "*"
serde = "*"
serde_json = "*"
chrono = { version = "0.4", features = ["serde"] }
