[package]
name = "vdb"
version = "0.2.0"
authors = ["Raoul van Putten"]
edition = "2018"
description = "A database system implemented in rust that takes ideas from Entity Component Systems and relational databases."
license = "MIT"

[dependencies]
serde_derive = "1.0.*"
serde = "1.0.*"
serde_json = "1.0.*"
chrono = { version = "0.4", features = ["serde"] }
